Basic Functionalities. Run As Eclipse Application, Create temporary project and temp.sw file, (contents being from resources-> temp.sw) and then Swid->PrintToConsole
You will have to change the location of FileReader called in PrintPropertyListener to correct location of commonparsertestrdf.rdf in resources

--- a/org.swid/plugin.xml
+++ b/org.swid/plugin.xml
@@ -8,7 +8,7 @@
             name="Semantic Editor"
             extensions="sw"
             icon="icons/sample.gif"
-            contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
+            contributorClass="org.swid.editors.SwidActionContributor"
             class="org.swid.editors.semEditor"
             id="org.swedit.editors.semEditor">
       </editor>
